--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "truco-server",
+  "name": "jogo-truco",
   "version": "1.0.0",
+  "description": "Jogo de truco online",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
